<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Airsoft Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Welcome to Airsoft Tracker!</string>
    <string name="iniciaORegistrate">Log in with your account or register</string>
    <string name="email">Email</string>
    <string name="contrasenya">Password</string>
    <string name="iniciarSesion">Log in</string>
    <string name="noCuenta">You don´t have an account? Register a new one</string>
    <string name="creaTuCuenta">Create your account</string>
    <string name="nombre">Name</string>
    <string name="edad">Age</string>
    <string name="apellidos">Surname</string>
    <string name="telefono">Phone</string>
    <string name="usuario">User</string>
    <string name="soyDuenyo">I own a field</string>
    <string name="registrarse">Register</string>
    <string name="iniciandoSesion">Logging in...</string>
    <string name="baja">Leave</string>
    <string name="unirse">Join</string>
    <string name="verDetalles">Show details</string>
    <string name="cancelarPartida">Cancel game</string>
    <string name="equipo1">Team 1</string>
    <string name="equipo2">Team 2</string>
    <string name="miPerfil">My profile</string>
    <string name="guardar">Save</string>
    <string name="cerrarSesion">Log out</string>
    <string name="dejarDeSeguir">Unfollow</string>
    <string name="buscarCampos">Search fields...</string>
    <string name="misPartidas">My games</string>
    <string name="noTienesPartidas">You don´t have any game...</string>
    <string name="unirseAPartida">Join game</string>
    <string name="camposSeguidos">Followed Fields</string>
    <string name="explorarCampos">Explore fields</string>
    <string name="porcentajeVD">"% W/L: "</string>
    <string name="crearPartida">Create game</string>
    <string name="editaCampo">Edit your field</string>
    <string name="descripcion">Description</string>
    <string name="miCampo">My field</string>
    <string name="descripcionCampo">Field´s description</string>
    <string name="nombreDeLaPartida">Name of the game</string>
    <string name="jugadoresPorEquipo">Players per team</string>
    <string name="fechaInicio">Start date</string>
    <string name="fechaFin">End date</string>
    <string name="vamosACrearTuCampo">Let´s create your field</string>
    <string name="crearCampo">Create field</string>
    <string name="partidasJugadas">played games</string>
    <string name="campo">Field</string>
    <string name="infoFragmentCampoDuenyo">Here you can manage your field data; name, description and type. Remember that a detailed description can attract new players.</string>
    <string name="partidas">Games</string>
    <string name="infoFragmentPartidasDuenyo">In this section you can create games or cancel those already created. Your followers will be able to access your games. Once a game ends you can assign a winner.</string>
    <string name="perfil">Profile</string>
    <string name="infoFragmentPerfil">Here you can change your personal data at any time</string>
    <string name="cargando">Loading...</string>
    <string name="errorCargarPartidas">Error while loading games</string>
    <string name="ganadorEquipo">"Winner: Team "</string>
    <string name="asignarGanador">Assign winner</string>
    <string name="quieresCancelarLaPartida">Do you want to cancel the game?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="errorAsignarGanador">Error assigning winner</string>
    <string name="infoFragmentsPartidasJugador">Do you feel like playing a game? Here you can join games published by the courses you follow along with other players. You can unsubscribe before a game starts if you are unable to attend.</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="victorias">"Wins: "</string>
    <string name="derrotas">"Losses: "</string>
    <string name="verCampo">Show field</string>
    <string name="enCurso">In progress</string>
    <string name="quieresDarteDeBaja">Do you want to leave the game?</string>
    <string name="seleccionaEquipoGanador">Select the winner team</string>
    <string name="cancelar">Cancel</string>
    <string name="hasAbandonadoLaPartida">You left the game</string>
    <string name="errorSalirPartida">Error when leaving the game</string>
    <string name="errorCargarCampos">Error loading fields</string>
    <string name="teHasUnidoAlCampo">"You now follow "</string>
    <string name="yaSiguesA">"You already follow "</string>
    <string name="errorDatosUsuario">Error getting user data</string>
    <string name="partidaCompleta">Game is full</string>
    <string name="yaTeHasUnido">You already joined</string>
    <string name="quieresUnirtePartida">Do you want to join the game?</string>
    <string name="errorCargarLaPartida">Error loading game data</string>
    <string name="quieresDejarDeSeguir">Do you want to unfollow this field?</string>
    <string name="hasDejadoDeSeguir">You stopped following the field</string>
    <string name="errorDejarDeSeguir">Error when unfollowing the field</string>
    <string name="cuentaYaExiste">Account already exists</string>
    <string name="debesCompletarCampos">You have to complete all fields to continue</string>
    <string name="usuarioCreadoConExito">User created succesfully</string>
    <string name="errorRegistrarUsuario">Error registering user</string>
    <string name="campoAbierto">Open field</string>
    <string name="mixto">Mixed</string>
    <string name="infoFragmentsEstadisticas">Here you can see your statistics as a player represented in a simple graph. You can see the total number of games you have played, as well as wins and losses, and your winning percentage. Try not to let it turn red!</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mollis purus in erat dapibus, sit amet cursus enim blandit. Mauris id tempor tortor. Suspendisse posuere, sem ac egestas commodo, nisl nibh imperdiet est, non dictum felis lacus et sapien. Vivamus id lacus sit amet magna consequat facilisis. Donec rutrum dignissim viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut maximus sem ex, in porttitor eros laoreet non. Vivamus tincidunt lobortis arcu et pulvinar.</string>
    <string name="noEncuentraCampos">Fields not found...</string>
    <string name="errorSeguirCampo">Error following the field</string>
    <string name="noSeEncontraronPartidas">Games not found...</string>
</resources>