<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textColor="@color/texto_primario"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciaORegistrate"
            android:textColor="@color/texto_secundario"
            android:textSize="16dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etUsuarioRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email"
            android:textColor="@color/texto_secundario"
            android:textColorHint="@color/texto_secundario"
            android:background="@drawable/estilo_edittext"
            android:padding="12dp"
            android:textColorHighlight="@color/rojo"/>

        <EditText
            android:id="@+id/etContrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:hint="@string/contrasenya"
            android:textColor="@color/texto_secundario"
            android:textColorHint="@color/texto_secundario"
            android:background="@drawable/estilo_edittext"
            android:padding="12dp"
            android:textColorHighlight="@color/rojo"/>

        <Button
            android:id="@+id/btnCrearCampo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/texto_boton"
            android:layout_marginBottom="16dp"
            android:text="@string/iniciarSesion"
            android:background="@drawable/estilo_boton"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/primario"
            android:background="@drawable/estilo_boton_transparente"
            android:text="@string/noCuenta"/>

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_gravity="top"
        android:layout_margin="40dp"
        android:src="@drawable/logo" />
</FrameLayout>
