<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fondo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/vamosACrearTuCampo"
        android:textColor="@color/primario"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/texto_secundario"
        android:textColorHint="@color/texto_secundario"
        android:background="@drawable/estilo_edittext"
        android:padding="12dp"
        android:textColorHighlight="@color/rojo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:textColor="@color/texto_secundario"
            android:textColorHint="@color/texto_secundario"
            android:background="@drawable/estilo_edittext"
            android:padding="12dp"
            android:textColorHighlight="@color/rojo"/>

        <TextView
            android:id="@+id/tvContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0/150"
            android:textColor="@color/texto_secundario"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/estilo_edittext"/>

    <Button
        android:id="@+id/btnCrearCampo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/estilo_boton"
        android:text="@string/crearCampo"
        android:textAllCaps="false"
        android:textColor="@color/texto_boton"/>

</LinearLayout>
